--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "luxon": "^3.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3",
